--- a/desktop/index.html
+++ b/desktop/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <link rel="icon" type="image/svg+xml" href="/src/assets/logo.svg" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.yellow.min.css">
   <title>polka Desktop</title>
 </head>
 
